--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 target/
 Cargo.lock
+
+# Debian build artifacts
+debian/.debhelper/
+debian/*/
+debian/*.substvars
+debian/*.debhelper
+debian/files
+debian/debhelper-build-stamp
